--- a/.gitmodules
+++ b/.gitmodules
@@ -1,9 +1,9 @@
-[submodule "azure-c-shared-utility"]
+[submodule "c-utility"]
 	path = c-utility
 	url = https://github.com/Azure/azure-c-shared-utility.git
 [submodule "parson"]
 	path = parson
 	url = https://github.com/kgabis/parson.git
-[submodule "azure-umqtt-c"]
+[submodule "umqtt"]
 	path = umqtt
 	url = https://github.com/Azure/azure-umqtt-c.git
