add API to access bos.

--- a/iothub_client/CMakeLists.txt
+++ b/iothub_client/CMakeLists.txt
@@ -26,6 +26,7 @@ compileAsC99()
 
 option(sqlite_persistence "set sqlite_persistence to ON which enable use sqlite as persistent storage. Default is OFF" OFF)
 option(device_management "set iotdm_client to OFF to skip building for iot device mangement client. Default is ON" ON)
+option(bos "set bos to OFF to skip building for bos client. Default is ON" ON)
 
 include_directories(../certs)
 
@@ -58,8 +59,10 @@ if (${device_management})
     set(iothub_client_h_files ${iothub_client_h_files} ../parson/parson.h ./inc/iotdm_client.h ./inc/iotdm_callback.h)
 endif()
 
-if(NOT ${dont_use_uploadtoblob})
+if (${bos})
     include_directories(../parson)
+    set(iothub_client_c_files ${iothub_client_c_files} ../parson/parson.c ./src/bos.c ./src/http_signer.c)
+    set(iothub_client_h_files ${iothub_client_h_files} ../parson/parson.h ./inc/bos.h ./inc/http_signer.h)
 endif()
 
 include_directories(${AZURE_C_SHARED_UTILITY_INCLUDES})
