--- a/iothub_client/samples/CMakeLists.txt
+++ b/iothub_client/samples/CMakeLists.txt
@@ -37,3 +37,5 @@ add_subdirectory(simple_pub_sample)
 add_subdirectory(iotdm_client_sample)
 
 add_subdirectory(bos_sample)
+
+add_subdirectory(iot_smarthome_client_sample)
