--- a/.gitmodules
+++ b/.gitmodules
@@ -6,5 +6,5 @@
 	url = https://github.com/kgabis/parson.git
 [submodule "umqtt"]
 	path = umqtt
-	url = https://github.com/jewelzhu/azure-umqtt-c.git
+	url = https://github.com/Azure/azure-umqtt-c.git
 	branch = release_2017_09_08
